--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.16</version>
     </dependency>
+    <!--commons-codec -->
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.10</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>javapractice</finalName>
