--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,18 @@
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/sphinxapi/sphinxapi -->
+    <dependency>
+      <groupId>sphinxapi</groupId>
+      <artifactId>sphinxapi</artifactId>
+      <version>2.0.3</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-collections/commons-collections -->
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>javapractice</finalName>
