--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,32 @@
       <version>2.9.0</version>
     </dependency>
     <!-- es -->
+<!--    <dependency>-->
+<!--      <groupId>org.elasticsearch</groupId>-->
+<!--      <artifactId>elasticsearch</artifactId>-->
+<!--      <version>1.7.2</version>-->
+<!--    </dependency>-->
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-client &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.elasticsearch.client</groupId>-->
+<!--      <artifactId>elasticsearch-rest-client</artifactId>-->
+<!--      <version>7.6.2</version>-->
+<!--    </dependency>-->
+    <!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-high-level-client -->
     <dependency>
-      <groupId>org.elasticsearch</groupId>
-      <artifactId>elasticsearch</artifactId>
-      <version>1.7.2</version>
+      <groupId>org.elasticsearch.client</groupId>
+      <artifactId>elasticsearch-rest-high-level-client</artifactId>
+      <version>7.6.2</version>
     </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/com.aparapi/aparapi -->
+    <dependency>
+      <groupId>com.aparapi</groupId>
+      <artifactId>aparapi</artifactId>
+      <version>1.10.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>javapractice</finalName>
@@ -117,8 +138,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
